fix index url bug

--- a/templates/myapp1/mult.html
+++ b/templates/myapp1/mult.html
@@ -145,7 +145,7 @@
             var cs = $("#cs").val();
             var bcs = $("#bcs").val();
             $.post(
-              '${SITE_URL}mult/cal',
+              '${SITE_URL}cal',
               {
                 cs: cs,
                 bcs: bcs
